--- a/style.scss
+++ b/style.scss
@@ -17,7 +17,7 @@ body{
     background: #d8e0f7;
 }
 
-.container,.guitar, .head,.shirt,.sleeve, .leg, .arm,.guitar-bridge, .guitar-neck ,.forearm, .guitar-body,.guitar-head, .guitar-hole, .shoe, .hand, .guitar-belt{
+.container,.guitar, .head,.shirt,.sleeve, .leg, .arm,.guitar-bridge, .guitar-neck ,.forearm, .guitar-body,.guitar-head, .guitar-hole, .shoe, .hand, .guitar-belt, .guitar-belt-2{
     position: absolute
 }
 
@@ -73,7 +73,7 @@ body{
 }
 .arm.right{
     animation: none;
-    transform: translateX($player-shirt-width + $player-sleeve-width - ($player-sleeve-width /5) );
+    transform: translateX($player-shirt-width + $player-sleeve-width - ($player-sleeve-width /5) ) rotate(178deg);
 }
 
 .forearm{
@@ -334,11 +334,18 @@ transform: rotate(90deg);
 }
 
 .guitar-belt{
-    width:10px;
-    height:200px;
+    top:$player-head-diameter;
+    left: - $player-sleeve-width+30px;
+    transform: rotate(15deg);
+    width:15px;
+    height:320px;
     background:black;
 }
+.guitar-belt.right{
+    height:270px;
+    transform:  translateX($player-shirt-width+ $player-sleeve-width - 20px) rotate(170deg);
 
+}
 
 .footer {
     font-family: 'Homemade Apple', cursive;
